FRAMEWORK INITIAL COMMIT